# tif_splitor

./: Cargo.toml  readme.md
src/: lib.rs
tests/: test.rs
